--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ sans-serif; */
   --shadow: #eeeeee;
   --indent: 30px;
   --item: 3;
+  --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -129,6 +130,7 @@ img {
 }
 
 .nav-link {
+  position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -138,6 +140,32 @@ img {
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+	transition: color var(--anim-fast);
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+
+  transform: translateX(-50%) scaleX(0.3);
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: var(--accent-color);
+  opacity: 0;
+
+  transition: transform var(--anim-fast), opacity var(--anim-fast);
+}
+
+.nav-link:hover:after,
+.nav-link:focus:after {
+  transform: translateX(-50%) scaleX(1);
+  opacity: 1;
 }
 
 .nav-item:not(:last-child) {
@@ -151,6 +179,12 @@ img {
 .nav-link.current {
   color: var(--accent-color);
 }
+
+.current.nav-link::after {
+	opacity: 1;
+	transform: translateX(-50%);
+}
+
 
 .nav-link:hover,
 .nav-link:focus,
@@ -173,6 +207,8 @@ img {
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+
+		transition: color var(--anim-fast);
 }
 
 .contact-icon {
@@ -189,10 +225,11 @@ img {
 
 .hero {
   max-width: 1600px;
-	height: 600px;
+  height: 600px;
   margin: 0 auto;
   background-color: var(--dark-backgrount);
-	background-image: linear-gradient(to bottom,rgba(47, 48, 58, 0.4),	rgba(47, 48, 58, 0.4)), url(../images/Img-hero.jpg);
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/Img-hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -229,6 +266,8 @@ img {
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+		transition: background var(--anim-fast);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -309,6 +348,26 @@ img {
   gap: 30px;
 }
 
+.working-list-item {
+  position: relative;
+}
+
+.working-overlay {
+  position: absolute;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  width: 100%;
+
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.working-overlay-text {
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 /* -------------------------Чим займаємося------------------------- */
 
 /* -------------------------Наша команда------------------------- */
@@ -368,8 +427,6 @@ img {
   gap: 10px;
 }
 
-.sotials-item {
-}
 
 .socials-link {
   display: flex;
@@ -380,6 +437,8 @@ img {
   border-radius: 50%;
   background-color: #ffffff;
   fill: #afb1b8;
+
+	transition: fill var(--anim-fast), background-color var(--anim-fast);
 }
 
 .socials-link:hover,
@@ -418,10 +477,12 @@ img {
   border: 1px solid currentColor;
   border-radius: 4px;
   color: #afb1b8;
+
+	transition: color var(--anim-fast);
 }
 
 .klients-icon {
-	fill: currentColor;
+  fill: currentColor;
 }
 
 .klients-link:hover,
@@ -464,6 +525,8 @@ img {
   font-style: normal;
   line-height: 24px;
   color: var(--main-background);
+
+	transition: color var(--anim-fast);
 }
 
 .footer-mail,
@@ -487,7 +550,7 @@ img {
   color: #ffffff;
 }
 .footer-icon {
-	fill: #ffffff;
+  fill: #ffffff;
 }
 
 .footer-socials-link {
@@ -531,6 +594,8 @@ img {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+
+	transition: background var(--anim-fast), box-shadow var(--anim-fast), color var(--anim-fast);
 }
 
 .filter-list-item:not(:last-child) {
@@ -555,8 +620,6 @@ img {
 
 .portfolio-list-item {
   flex-basis: calc(100% / var(--item) - var(--indent));
-  /* margin-right: var(--indent);
-  margin-bottom: var(--indent); */
 }
 
 .portfolio-sub-title {
@@ -583,7 +646,9 @@ img {
 }
 
 .portfolio-link {
-display: block;
+  display: block;
+
+	transition: box-shadow var(--anim-fast);
 }
 
 .portfolio-link:hover,
@@ -592,4 +657,103 @@ display: block;
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.portfolio-thumb {
+	position: relative;
+	overflow: hidden;
+}
+
+.portfolio-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	transform: translateY(100%);
+	
+	width: 100%;
+	height: 100%;
+	padding-left: 24px;
+	padding-right: 24px;
+	display: flex;
+	align-items: center;
+	user-select: none;
+	
+	background-color: rgba(33, 150, 243, 0.9);;
+
+	transition: transform var(--anim-fast);
+}
+
+.portfolio-list-item:hover .portfolio-overlay {
+	transform: translateY(0);
+}
+
+.portfolio-overlay-text {
+	font-size: 18px;
+	line-height: calc(28/18);
+	color: #FFFFFF;
+
+}
+
+
 /* -------------------------Portfolio Filter------------------------- */
+
+/* -------------------------Modal window------------------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+	transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  min-height: 528px;
+  min-width: 581px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+	transition: transform var(--anim-fast), opacity var(--anim-fast), scale 500ms linear;
+}
+
+.backdrop.is-hidden .modal {
+	opacity: 0;
+	transform: translateX(50%) translateY(-100%) scale(0.1);
+}
+
+.modal-button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+}
+
+/* -------------------------Modal window------------------------- */
