--- a/css/style.css
+++ b/css/style.css
@@ -352,21 +352,22 @@ img {
   position: relative;
 }
 
-.working-overlay {
-  position: absolute;
-  bottom: 0;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  width: 100%;
-
-  background-color: rgba(47, 48, 58, 0.8);
-}
-
 .working-overlay-text {
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+	text-transform: uppercase;
+		color: #ffffff;
+		  position: absolute;
+  bottom: 0;
+  width: 100%;
+	height: 70px;
+font-weight: 700;
+		background-color: rgba(47, 48, 58, 0.8);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
+
+
 
 /* -------------------------Чим займаємося------------------------- */
 
@@ -682,7 +683,7 @@ img {
 	transition: transform var(--anim-fast);
 }
 
-.portfolio-list-item:hover .portfolio-overlay {
+.portfolio-link:hover .portfolio-overlay, .portfolio-link:focus .portfolio-overlay {
 	transform: translateY(0);
 }
 
@@ -723,8 +724,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  min-height: 528px;
-  min-width: 581px;
+  min-height: 581px;
+  min-width: 528px;
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
